--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   device_info_plus: ^10.0.1
   sensors_plus: ^5.0.0
   battery_plus: ^6.0.0
+  bloc: ^8.1.4
+  meta: ^1.11.0
   
 dev_dependencies:
   flutter_test:
