--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   battery_plus: ^6.0.0
   bloc: ^8.1.4
   meta: ^1.11.0
+  shared_preferences: ^2.2.2
+  flutter_bloc: ^8.1.5
+  equatable: ^2.0.5
   
 dev_dependencies:
   flutter_test:
