--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_bloc: ^8.1.5
   equatable: ^2.0.5
+  rename: ^3.0.2
   
 dev_dependencies:
   flutter_test:
