--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
+  flutter_localizations:
+    sdk: flutter
+
   device_info_plus: ^10.0.1
   sensors_plus: ^5.0.0
   battery_plus: ^6.0.0
@@ -19,9 +21,9 @@ dependencies:
   equatable: ^2.0.5
   rename: ^3.0.2
   flutter_launcher_icons: ^0.13.1
-  intl: ^0.19.0
+  intl: ^0.18.1 # periodically check upgradability (currently constrained by flutter_localizations)
   intl_utils: ^2.8.7
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -37,8 +39,11 @@ flutter_launcher_icons:
   android: true
   image_path_android: "assets/icon/logo.png"
   adaptive_icon_background: "assets/icon/logo_back.png"
-  adaptive_icon_foreground: "assets/icon/logo_front.png" # foreground is a png defined in a zone that is 38.8% of the background
+  adaptive_icon_foreground: "assets/icon/logo_front.png" # a png defined in an area that is 38.8% the size of background
   background_color_ios: "#1c8adb"
   ios: true
   image_path_ios: "assets/icon/logo_rectangle.png"
   remove_alpha_ios: true
+
+flutter_intl:
+  enabled: true
